crates/pcb-zen/tests/snapshots/module_loading__module_load_remote_with_alias.snap
---
source: crates/pcb-zen/tests/module_loading.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "C1")
      (value "1uF")
      (footprint "C_0402_1005Metric:C_0402_1005Metric")
      (libsource (lib "lib") (part "1uF") (description "unknown"))
      (sheetpath (names "C1.C") (tstamps "1ef4a3b7-81ec-5a47-8b7f-9f08c2fe108b"))
      (tstamps "1ef4a3b7-81ec-5a47-8b7f-9f08c2fe108b")
      (property (name "Reference") (value "C1"))
      (property (name "Capacitance") (value "1uF"))
      (property (name "Package") (value "0402"))
      (property (name "Type") (value "capacitor"))
      (property (name "Value") (value "1uF"))
      (property (name "description") (value "Unpolarized capacitor"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "P1") (type "stereo"))
        (pin (num "2") (name "P2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "P1")
      (node (ref "C1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "P2")
      (node (ref "C1") (pin "2") (pintype "stereo"))
    )
  )
)
