crates/pcb-zen/tests/snapshots/module_loading__module_nonexistent_alias.snap
---
source: crates/pcb-zen/tests/module_loading.rs
expression: netlist
---
Error: [TEMP_DIR]test.zen:3:17-49 File not found: [TEMP_DIR]does_not_exist/something.zen
