crates/pcb-zen/tests/snapshots/module_loading__module_nonexistent_file.snap
---
source: crates/pcb-zen/tests/module_loading.rs
expression: netlist
---
Error: [TEMP_DIR]test.zen:3:17-45 File not found: [TEMP_DIR]does_not_exist.zen
