crates/pcb-zen/tests/snapshots/module_loading__module_with_nested_directories.snap
---
source: crates/pcb-zen/tests/module_loading.rs
assertion_line: 79
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "TEST")
      (footprint "stdlib_kicad-footprints_Capacitor_SMD:C_0805_2012Metric")
      (libsource (lib "lib") (part "TEST") (description "unknown"))
      (sheetpath (names "sub.TestComponent") (tstamps "3e2bd4f8-e122-5324-ba4c-49fa5528be8b"))
      (tstamps "3e2bd4f8-e122-5324-ba4c-49fa5528be8b")
      (property (name "Reference") (value "U1"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"TEST\",\"qualifications\":[]}"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "TEST")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
        (pin (num "N1") (name "1") (type "stereo"))
        (pin (num "N2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "sub.N1")
      (node (ref "U1") (pin "1") (pintype "stereo"))
      (node (ref "U1") (pin "N1") (pintype "stereo"))
    )
    (net (code "2") (name "sub.N2")
      (node (ref "U1") (pin "2") (pintype "stereo"))
      (node (ref "U1") (pin "N2") (pintype "stereo"))
    )
  )
)
